name:           Tetris
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Garfield.Xue

executable Tetris
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   Graphics.Gloss.Interface.FRP.ReactiveBanana

library 
  build-depends:   
                   base >= 4,
                   reactive-banana >=0.8.0 && <0.9,
                   random >=1.0.1 && <1.1,
                   gloss >=1.8.1 && <1.9
  hs-source-dirs:  src
  ghc-options:     -Wall
  other-modules:   Graphics.Gloss.Interface.FRP.ReactiveBanana

